--- a/LibraryWebsite.API/appsettings.json
+++ b/LibraryWebsite.API/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=LibraryWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=.;Database=LibraryWebsiteDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-  
 
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
