--- a/LibraryWebsite.API/appsettings.json
+++ b/LibraryWebsite.API/appsettings.json
@@ -10,5 +10,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_123456789",
+    "Issuer": "LibraryWebsite",
+    "Audience": "LibraryWebsiteUsers"
+  }
+
 }
